# MoosicBox

./: .dockerignore  .editorconfig  .envrc  .eslintrc.cjs  .gitignore  .gitmodules  .mdformat.toml  .prettierignore  .prettierrc.json  .remarkignore  .remarkrc.yml  .yamlfmt  AGENTS.md  Cargo.toml  DEVELOPMENT.md  DST_PROGRESS.md  README.md  aws-deploy.sh  biome.json  clippier.toml  clippy.toml  compose.yaml  deny.toml  diesel.toml  do-deploy.sh  dprint.json  flake.nix  free_disk_space.sh  generate-dockerfiles.sh  libmod.rlib  must_use_test  opencode.json  output.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rust_out  shell.nix  sst-secrets.ts  (+4 more)
.cargo/: config  config.toml
.clippier/transforms/: asio-filter.lua  rustdoc-filter.lua  test-coverage-filter.lua
.cursor/rules/: api-service-integration.mdc  audio-processing.mdc  cargo.mdc  deployment-infrastructure.mdc  hyperchad-ui-framework.mdc  mdc.mdc  moosicbox-architecture.mdc  moosicbox-overview.mdc  rust-development.mdc
.github/: codecov.yml  coverage.sh
.github/prompts/: determinism.md  security.md
.github/scripts/: create-ack-comment.sh  format-execution-details.sh  opencode-auth-reseed-input.sh  opencode-auth-validate.py  opencode-db-watcher.py  stream-watcher.sh
.github/workflows/: ai-code-review.yml  ai-issue.yml  ai-pr.yml  ai-sync-pr.yml  app-website-auto-upgrade-node-dependencies.yml  app-website-build-and-test.yml  app-website-deploy-website.yml  auto-upgrade-dependencies.yml  auto-upgrade-incompatible-dependencies.yml  auto-upgrade-node-dependencies.yml  bloaty.yml  build-and-test.yml  build-docker-images.yml  build-load-balancer-docker-image.yml  build-server-docker-image.yml  build-tunnel-server-docker-image.yml  claude-code-review.yml  claude-denied.yml  claude-issue.yml  claude-pr.yml  claude-sync-pr.yml  claude.yml  deploy-load-balancer.yml  deploy-server.yml  deploy-tunnel-server.yml  deploy-tunnel-service.yml  determinism-checker.yml  examples-checker.yml  hyperchad-web-build-and-test.yml  infra-auto-upgrade-node-dependencies.yml  infra-build-and-test.yml  marketing-website-auto-upgrade-node-dependencies.yml  marketing-website-build-and-test.yml  marketing-website-deploy-website-rust.yml  marketing-website-deploy-website.yml  marketing-website-remove-website.yml  marketing-website-rust-build-and-test.yml  opencode-auth-healthcheck.yml  opencode-auth-refresh.yml  opencode-auth-reseed.yml  (+19 more)
app-website/: .editorconfig  .eslintrc.cjs  .gitignore  .prettierrc.json  astro.config.sst.mjs  cdk.context.json  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  sst-env.d.ts  sst.config.ts  tsconfig.json
app-website/infra/: site.ts
app-website/src/: config.ts  global.d.ts  startup.ts  turbo-env.d.ts
cache-artifact/: README.md  action.yml
cache-artifact/examples/: advanced-usage.yml  basic-usage.yml  test-action.yml
docs/: DST_PROGRESS.md
infra/: cert-manager.ts  cluster.ts  load-balancer.ts  registry.ts  tunnel-server.ts
kubernetes/: cert-manager.yaml
kubernetes/server/: moosicbox-server-deployment.yaml  moosicbox-server-service.yaml
kubernetes/tunnel-server/: moosicbox-tunnel-server-certificate.yaml  moosicbox-tunnel-server-deployment.yaml  moosicbox-tunnel-server-ingress.yaml  moosicbox-tunnel-server-issuer.yaml  moosicbox-tunnel-server-lb-deployment.yaml  moosicbox-tunnel-server-nodeport.yaml  moosicbox-tunnel-server-service.yaml
marketing-website/: .eslintrc.cjs  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  sst-env.d.ts  sst.config.ts  tsconfig.json
marketing-website/infra/: site.ts
marketing-website/render-directive/: render.js
marketing-website/src/: startup.ts
migrations/2023-10-14-031701_create_tracks/: up.sql
migrations/2023-10-16-194251_create_sessions/: up.sql
migrations/2023-10-19-160305_create_players/: up.sql
migrations/2023-10-21-224111_create_active_players/: down.sql  up.sql
players/symphonia_player/: Cargo.toml
players/symphonia_player/src/: lib.rs  media_sources.rs  output.rs  resampler.rs
players/symphonia_player/src/media_sources/: remote_bytestream.rs  streamable_file.rs  streamable_file_async.rs
players/symphonia_player/src/output/: encoder.rs  pulseaudio.rs
players/symphonia_player/src/output/cpal/: player.rs
players/symphonia_player/src/output/encoder/: aac.rs
players/symphonia_player/src/output/encoder/aac/: encoder.rs
players/symphonia_player/src/output/encoder/mp3/: encoder.rs
players/symphonia_player/src/output/encoder/opus/: encoder.rs
players/symphonia_player/src/output/opus/: encoder.rs
players/symphonia_player/src/output/pulseaudio/: common.rs  simple.rs  standard.rs
proxy_server/: Cargo.toml  package.json  sst.config.ts  tsconfig.json
proxy_server/.cargo/: config.toml
proxy_server/src/: api.rs  main.rs  ws.rs
proxy_server/stacks/: ProxyServerStack.ts
server/: Cargo.toml  Dockerfile
server/src/: api.rs  auth.rs  handler.rs  main.rs  playback_session.rs  scan.rs  server.rs  ws.rs
server/src/ws/: handler.rs  server.rs
spec/dst/: PREAMBLE.md  architecture.md  dst-implementation-roadmap.md  overview.md  plan.md
spec/generic-pipelines/: IMPLEMENTATION_READY.md  PREAMBLE.md  architecture.md  decisions.md  plan.md
spec/generic-schema-migrations/: PREAMBLE.md  overview.md  plan.md  recovery-commands.md
spec/opus-native/: PREAMBLE.md  architecture.md  future-stereo-work.md  plan.md  rfc6716.txt
spec/p2p/: plan.md  (+3 more)
src/: api.rs  app.rs  cache.rs  main.rs  menu.rs  player.rs  slim.rs
stacks/: MoosicBoxStack.ts  MusicBoxStack.ts
terraform/: .gitignore  README.md  docker.tf  kubernetes.tf  locals.tf  main.tf  run-local.sh  terraform.tfvars.example  test-local.sh  variables.tf
tunnel_server/: Cargo.toml  Dockerfile  README.md  package.json  sst.config.ts
tunnel_server/.cargo/: config.toml
tunnel_server/src/: api.rs  auth.rs  main.rs  ws.rs
tunnel_server/src/ws/: api.rs  db.rs  handler.rs  main.rs  server.rs
tunnel_server/stacks/: TunnelServerStack.ts
website/: .eslintignore  README.md  astro.config.mjs  bun.lockb  package.json  sst-env.d.ts
(+319 files in other folders)
