[workspace]
members = [
    "packages/aconverter",
    "packages/admin_htmx",
    "packages/app/native",
    "packages/app/native/bundled",
    "packages/app/native/image",
    "packages/app/native/lib",
    "packages/app/native/ui",
    "packages/app/state",
    "packages/app/tauri/bundled",
    "packages/app/tauri/client",
    "packages/app/tauri/create_config",
    "packages/app/tauri/src-tauri",
    "packages/app/tauri/tauri-plugin-player",
    "packages/app/tauri/ws",
    "packages/assert",
    "packages/async_service",
    "packages/audio_decoder",
    "packages/audio_encoder",
    "packages/audio_output",
    "packages/audio_zone",
    "packages/audio_zone/models",
    "packages/auth",
    "packages/channel_utils",
    "packages/clippier",
    "packages/config",
    "packages/core",
    "packages/database",
    "packages/database_connection",
    "packages/downloader",
    "packages/env_utils",
    "packages/files",
    "packages/gen",
    "packages/gigachad",
    "packages/gigachad/actions",
    "packages/gigachad/color",
    "packages/gigachad/renderer",
    "packages/gigachad/renderer/datastar",
    "packages/gigachad/renderer/egui",
    "packages/gigachad/renderer/fltk",
    "packages/gigachad/renderer/html",
    "packages/gigachad/renderer/html/actix",
    "packages/gigachad/renderer/html/lambda",
    "packages/gigachad/renderer/htmx",
    "packages/gigachad/renderer/vanilla_js",
    "packages/gigachad/router",
    "packages/gigachad/transformer",
    "packages/gigachad/transformer/models",
    "packages/image",
    "packages/json_utils",
    "packages/library",
    "packages/library/models",
    "packages/load_balancer",
    "packages/logging",
    "packages/marketing_site",
    "packages/marketing_site/ui",
    "packages/mdns",
    "packages/menu",
    "packages/menu/models",
    "packages/middleware",
    "packages/moosicbox",
    "packages/music_api",
    "packages/music_api/models",
    "packages/openport",
    "packages/paging",
    "packages/player",
    "packages/profiles",
    "packages/qobuz",
    "packages/remote_library",
    "packages/resampler",
    "packages/scan",
    "packages/schema",
    "packages/search",
    "packages/server",
    "packages/session",
    "packages/session/models",
    "packages/stream_utils",
    "packages/task",
    "packages/telemetry",
    "packages/tidal",
    "packages/tunnel",
    "packages/tunnel_sender",
    "packages/tunnel_server",
    "packages/upnp",
    "packages/ws",
    "packages/yt",
]

resolver = "2"

[workspace.metadata.cargo-udeps.ignore]
normal = ["log", "moosicbox_assert", "moosicbox_env_utils"]

[workspace.metadata.cargo-machete]
ignored = ["log", "moosicbox_assert", "moosicbox_env_utils"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

[workspace.package]
edition = "2021"

[workspace.dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-htmx = "0.3.0"
actix-http = "3.9.0"
actix-rt = "2.10.0"
actix-web = "4.9.0"
actix-web-opentelemetry = { version = "0.20.1", features = [
    "metrics",
    "metrics-prometheus",
    "opentelemetry-prometheus",
    "prometheus",
] }
actix-ws = "0.3.0"
arrayvec = "0.7.6"
async-once-cell = "0.5.4"
async-recursion = "1.1.1"
async-trait = "0.1.86"
atomic_float = "1.1.0"
audiopus = "0.2.0"
awc = "3.5.1"
aws-config = "1.5.15"
aws-sdk-apigatewaymanagement = "1.57.0"
aws-sdk-ssm = "1.63.0"
base64 = "0.22.1"
bumpalo = "3.17.0"
bytes = "1.10.0"
bytesize = "1.3.0"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.5.28", features = ["derive"] }
color-hex = "0.2.0"
colored = { version = "3.0.0" }
console-subscriber = "0.4.1"
cpal = "0.15.3"
debounce = "0.2.2"
derive_more = "1.0.0"
diesel = { version = "2.2.7", default-features = false }
diesel_migrations = { version = "2.2.0", default-features = false }
dotenv = "0.15"
dyn-clone = "1.0.18"
eframe = { version = "0.30.0", default-features = false }
egui = { version = "0.30.0", default-features = false }
egui_extras = { version = "0.30.0", default-features = false }
enum-as-inner = "0.6.1"
env_logger = "0.11"
fdk-aac = "0.7.0"
flacenc = "0.4.0"
fltk = "1.5.2"
fltk-sys = "1.5.2"
flume = "0.11.1"
free_log_client = { version = "0.5.0", default-features = false }
futures = "0.3"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-sink = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
hex = "0.4.3"
home = "0.5.11"
hostname = "0.4.0"
html-escape = "0.2.13"
id3 = "1.16.1"
image = "0.25.5"
io-streams = "0.16.3"
itertools = "0.14.0"
jni = "0.21.1"
kanal = "0.1.0-pre8"
lambda_http = "0.14.0"
lambda_runtime = "0.13.0"
lazy_static = "1.5.0"
libpulse-binding = "2.28.2"
libpulse-simple-binding = "2.28.1"
libvips = { version = "1.7.0" }
local-ip-address = "0.6.3"
log = { version = "0.4", features = ["release_max_level_trace"] }
maud = "0.27.0"
md5 = "0.7.0"
mdns-sd = "0.13.2"
moosicbox_audiotags = { version = "0.1.0" }
moosicbox_lofty = { version = "0.1.0" }
mp3-duration = "0.1.10"
mp3lame-encoder = "0.2.1"
mysql = { version = "26.0.0", features = [
    "default-rustls",
    "rustls-tls",
], default-features = false }
mysql_common = { version = "0.34.1", default-features = false }
nanoid = "0.4.0"
native-tls = "0.2.13"
ndk-context = "0.1.1"
ogg = "0.9.2"
open = "5.3.2"
openssl = { version = "0.10.70", features = ["v110"] }
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
opentelemetry-prometheus = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opus = "0.3.0"
os_info = { version = "3.9.2", default-features = false }
pin-project = "1.1.9"
pin-utils = "0.1.0"
pingora = "0.4.0"
pingora-core = "0.4.0"
pingora-http = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-proxy = "0.4.0"
postgres-native-tls = "0.5.1"
postgres-openssl = "0.5.1"
postgres-protocol = "0.6.8"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5"
profiling = "1.0.16"
prometheus = "0.13.4"
puffin = "0.19.1"
puffin_egui = "0.29.0"
puffin_http = "0.16.1"
qstring = "0.7.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.9"
rangemap = "1.5.1"
rb = "0.4.1"
rcgen = "0.13.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "stream",
] }
roxmltree = "0.20"
rubato = "=0.12.0"
rupnp = { version = "2.0.0", features = ["full_device_spec"] }
rusqlite = { version = "=0.32.1", features = ["bundled"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.138"
serial_test = "3.2.0"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", default-features = false, features = [
    "chrono",
    "runtime-tokio",
] }
sqlx-mysql = { version = "0.8.3", default-features = false, features = [
    "chrono",
] }
sqlx-postgres = { version = "0.8.3", default-features = false, features = [
    "chrono",
] }
static_init = "1.0.3"
strum = "0.26.3"
strum_macros = "0.26.4"
symphonia = { version = "0.5.4", features = ["all"] }
syntect = "5.2.0"
tantivy = "0.22.0"
tauri = { version = "2.2.5", features = ["protocol-asset"] }
tauri-build = { version = "2.0.5", features = [] }
tauri-plugin = { version = "2.0.4", features = ["build"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-notification = "2.2.1"
test-log = "0.2.17"
thiserror = "2.0.11"
throttle = "0.1.0"
tl = "0.7.8"
tokio = { version = "1.43.0" }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls-vendored"] }
tokio-util = "0.7.13"
toml = "0.8.19"
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.19"
tracy-client = { version = "0.18.0", default-features = false }
uaparser = "0.6.4"
url = "2.5.4"
urlencoding = "2.1.3"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
uuid = { version = "1.12.1", features = ["v4"] }
webp = "0.3.0"
whoami = "1.5.2"
xml = "0.8.20"
